edited travis file to deploy on my own app only (helloworld-loic)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="entete">
-    <h2>Groupe 5 : Team V</h2>
+    <h2>Groupe 5 : Loic NDIE SIGHA</h2>
 </div>
 
 <h1>TP 1 : Titre du TP</h1>
