changer le nom du chef de groupe

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="entete">
-    <h2>Groupe 5 : </h2>
+    <h2>Groupe 5 : chef de groupe POLA</h2>
 </div>
 
 <h1>TP 1 : Titre du TP</h1>
